@@ -1,5 +1,13 @@
 2003-03-27  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-window.h: 
+	* src/nautilus-window.c: 
+	* src/nautilus-window-menus.c:
+	Don't save the location bar enabled prefs when showing it
+	temporarily.
+
+2003-03-27  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-list-view.c:
 	Keyboard shortcuts for context menu.
 	Don't eat CTRL-Space, that means we can't multiple-select.
